Alterações para a segunda Meetup

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/scroll.js"></script>
 
-    <title>Meetup | DOCKER & COMPANHIA</title>
+    <title>Meetup | DEVOPS & COMPANHIA</title>
 </head>
 
 <body class="bg-light">
     <div id="main-title" class="text-center d-flex">
         <img id="whale-icon" src="img/container_whale.png" alt="Ilustração de uma baleia azul feliz com containers em cima" />
-        <h1 class="display-1">Docker & Companhia</h1>
+        <h1 class="display-1">DevOps & Companhia</h1>
     </div>
 
     <main role="main" class="text-center">
@@ -42,14 +42,14 @@
                 <div class="flex-sm-wrap px-2">
                     <a href="#agenda">
                         <h2 class="text-uppercase">Data</h2>
-                        <p class="">01/12/2018</p>
+                        <p class="">Março 2019</p>
                     </a>
                 </div>
 
                 <div class="flex-sm-wrap">
                     <a href="#local">
                         <h2 class="text-uppercase">Local</h2>
-                        <p class="">Cidade Universitária</p>
+                        <p class="">a definir</p>
                     </a>
                 </div>
             </div>
@@ -64,17 +64,16 @@
                 Atenção
             </div>
             <div class="card-body">
-                <h5 class="card-title">Inscrições abertas para o evento!</h5>
-                <p class="card-text">Com as talks fechadas, as inscrições para participação estão abertas!</p>
-                <p class="card-text"><strong>Participe do evento e concorra a um livro sobre Docker, além de incríveis
-                        stickers!</strong></p>
+                <h5 class="card-title">Inscrições em breve!!</h5>
+                <p class="card-text">Estamos aceitando talks! crie uma ISSUES em nosso git com o tema e previa da talk.</p>
+                <p class="card-text"><strong>Participe do evento e ajude a melhorar nossa comunidade em sorocaba!</strong></p>
 
-                <a href="https://www.sympla.com.br/1-meetup-docker--cia-sorocaba__355478" target="_blank" class="btn btn-primary">Inscreva-se</a>
+                <a href="https://github.com/docker-sorocaba/Meetup.DockerFIle/issues" target="_blank" class="btn btn-primary">Submeter talk</a>
             </div>
-            <div class="card-footer text-muted">
+            <!-- <div class="card-footer text-muted">
                 Inscreva-se no link acima, no site Sympla, e <a href="#agenda" target="_blank">veja a nossa agenda e
                     talks do evento</a>.
-            </div>
+            </div> -->
         </div>
 
     </div>
@@ -83,7 +82,7 @@
     <article id="intro" class="jumbotron jumbotron-fluid">
 
         <div class="container">
-            <h3 class="display-3">Vem aí a 1ª meetup de <span class="docker-txt-emp">Docker</span> em Sorocaba!</h3>
+            <h3 class="display-3">Vem aí a 2ª meetup de <span class="docker-txt-emp">DevOps</span> em Sorocaba!</h3>
             <p class="lead">Agora, perto de você, a oportunidade de saber mais sobre o que está rolando no mundo DevOps
                 e bater um papo com pessoas que entendem do assunto.</p>
 
@@ -92,15 +91,14 @@
                     <h4>Evento Gratuito</h4>
                 </div>
                 <div class="card-body">
-                    <p class="h5 text-dark">Participe e concorra a um livro sobre Docker!</p>
-                    <h4 class="card-text"><strong>Data:</strong> 01/12/2018 (Sábado)</h4>
-                    <h4 class="card-text"><strong>Horário:</strong> 9h às 12h</h4>
+                    <h4 class="card-text"><strong>Data:</strong> Março 2019</h4>
+                    <h4 class="card-text"><strong>Horário:</strong> ----</h4>
                 </div>
             </div>
 
             <div class="d-flex flex-wrap flex-column justify-content-around align-items-center text-center py-3">
                 <div class="d-flex flex-wrap flex-column p-2 largura-50">
-                    <img id="main-publi" class="mx-auto" src="img/panfleto.png" alt="Imagem com informações principais do meetup Docker & Companhia. Data: em dezembro. Local: Cidade Universitária. Meetup Sorocaba. Docker & Companhia. Informações pelo telefone com Marcos (15) 98808-2972" />
+                    <img id="main-publi" class="mx-auto" src="img/panfleto.jpg" alt="Imagem com informações principais do meetup Docker & Companhia. Data: em dezembro. Local: Cidade Universitária. Meetup Sorocaba. Docker & Companhia. Informações pelo telefone com Marcos (15) 98808-2972" />
                 </div>
                 <div class="d-flex flex-wrap flex-row justify-content-around w-50">
                     <a href="https://www.sympla.com.br/1-meetup-docker--cia-sorocaba__355478" target="_blank" class="link-fontawe-icon">
@@ -116,7 +114,7 @@
 
             <div class="d-flex flex-wrap flex-row justify-content-around align-items-center text-center py-3">
                 <p>Abraçamos o desafio de montar uma meetup em Sorocaba sobre <span class="docker-txt-emp">Docker</span>,
-                    Kubernetes e novas ferramentas.</p>
+                    Kubernetes e novas ferramentas DevOps.</p>
                 <div>
                     <i class="fab fa-responsive fa-docker" aria-label="docker"></i>
                 </div>
@@ -130,7 +128,7 @@
         <div class="container">
             <h4 class="display-4"><i class="far fa-calendar-alt"></i> Agenda</h4>
 
-            <div class="list-group mt-5">
+            <!-- <div class="list-group mt-5">
                 <div class="list-group-item flex-column align-items-start">
                     <div class="d-flex flex-wrap w-100 justify-content-between">
                         <h5 class="mb-1">Introdução ao Docker</h5>
@@ -199,13 +197,13 @@
                     <p class="mb-1">Se o desenvolvimento de software é ágil a infraestrutura também deve ser. Já
                         imaginou uma infraestrutura sendo escalável, automatizada, padronizada e versionada da mesma
                         forma que acontece com o desenvolvimento de softwares?</p>
-                </div>
+                </div> -->
                 <div class="list-group-item flex-column align-items-start bg-secondary text-white">
                     <div class="d-flex flex-wrap w-100 justify-content-between ">
-                        <h5 class="mb-1">Sorteio do Livro</h5>
-                        <p>12h</p>
+                        <h5 class="mb-1">Agenda não definida!! </h5>
+                        <p></p>
                     </div>
-                    <p class="mb-1">Os participantes do evento poderão concorrer a um livro sobre Docker!</p>
+                    <p class="mb-1"></p>
                 </div>
             </div>
         </div>
@@ -216,7 +214,15 @@
         <div class="container">
             <h4 class="display-4"><i class="fas fa-bullhorn"></i> Patrocinadores</h4>
 
-            <div class="card-deck mt-5">
+            <div class="list-group-item flex-column align-items-start bg-secondary text-white">
+                <div class="d-flex flex-wrap w-100 justify-content-between ">
+                    <h5 class="mb-1">Em breve!! </h5>
+                    <p></p>
+                </div>
+                <p class="mb-1"></p>
+            </div>
+
+            <!-- <div class="card-deck mt-5">
                 <div class="card">
                     <div class="card-body">
                         <a href="https://www.uppertools.com.br/" target="_blank">
@@ -224,7 +230,7 @@
                             <img src="img/uppertools.svg">
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div </div> </article> <article id="organizadores" class="jumbotron jumbotron-fluid">
             <div class="container">
 
@@ -236,8 +242,8 @@
                                 <h5>Marcos Vinicius Rezende</h5>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Profissional de Infra TI</h5>
-                                <p class="card-text"><strong>Telefone:</strong> (15) 98808-2972</p>
+                                <h5 class="card-title">Analista de infraestrutura de TI</h5>
+                                <!-- <p class="card-text"><strong>Telefone:</strong> (15) 98808-2972</p> -->
                                 <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/marcosrehzende/"
                                         target="_blank">marcosrehzende</a></p>
                                 <p class="card-text"><strong>Email:</strong> <a href="mailto:rehzende@hotmail.com"
@@ -268,6 +274,8 @@
                                 <h5 class="card-title">Programador Java</h5>
                                 <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/cristianlpereira/"
                                         target="_blank">cristianlpereira</a></p>
+                                  <p class="card-text"><strong>Email:</strong> <a href="mailto:"
+                                        target="_blank"></a></p>
                             </div>
                         </div>
                     </div>
@@ -285,6 +293,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="card bg-light mb-3">
+                            <div class="card-header">
+                                <h5>Junior Xavier</h5>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Consultor de Sistemas</h5>
+                                <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/junior-xavier-73363bab/"
+                                        target="_blank">junior-xavier</a></p>
+                                <p class="card-text"><strong>Email:</strong> <a href="mailto:jrcesarx@hotmail.com"
+                                        target="_blank">jrcesarx@hotmail.com</a></p>
+                            </div>
+                        </div>
+                    </div>
+
+
 
 
 
@@ -299,10 +323,11 @@
             <h4 class="display-4"><i class="fas fa-map-marked-alt"></i> Local</h4>
 
             <div class="border-light mx-auto mt-5">
-                <h5>Universidade de Sorocaba - Cidade Universitária Prof. Aldo Vannucchi</h5>
-                <p class="lead">Rodovia Raposo Tavares, km 92,5 - Vila Artura, Sorocaba - SP, 18023-000</p>
+                <h5>A definir</h5>
+               <!-- <h5>Universidade de Sorocaba - Cidade Universitária Prof. Aldo Vannucchi</h5>
+                 <p class="lead">Rodovia Raposo Tavares, km 92,5 - Vila Artura, Sorocaba - SP, 18023-000</p>
                 <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.9824536983383!2d-47.40165888489495!3d-23.497141484714856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf61ce4634d061%3A0x54f9a979acd0e988!2sUniversidade+de+Sorocaba+-+Cidade+Universit%C3%A1ria+Prof.+Aldo+Vannucchi!5e0!3m2!1spt-BR!2sbr!4v1535763678535"
-                    frameborder="0" style="border:0" allowfullscreen></iframe>
+                    frameborder="0" style="border:0" allowfullscreen></iframe> -->
 
             </div>
 
