Update de local

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="flex-sm-wrap">
                     <a href="#local">
                         <h2 class="text-uppercase">Local</h2>
-                        <p class="">a definir</p>
+                        <p class="">Cidade Universitaria UNISO</p>
                     </a>
                 </div>
             </div>
