Alterações de data, banner e Organizadores

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="card-body">
                     <h4 class="card-text"><strong>Data:</strong> Março 2019</h4>
-                    <h4 class="card-text"><strong>Horário:</strong> ----</h4>
+                    <h4 class="card-text"><strong>Horário:</strong> ---- </h4>
                 </div>
             </div>
 
@@ -307,7 +307,20 @@
                             </div>
                         </div>
                     </div>
-
+					<div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="card bg-light mb-3">
+                            <div class="card-header">
+                                <h5>Wesley Rodrigues</h5>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Software Developer - Grupo GFT</h5>
+                                <p class="card-link"><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/wesleyrodrigues1/"
+                                        target="_blank">wesleyrodrigues1</a></p>
+                                <p class="card-text"><strong>Email:</strong> <a href="mailto:wesley.roh@hotmail.com"
+                                        target="_blank">wesley.roh@hotmail.com</a></p>
+                            </div>
+                        </div>
+                    </div>
 
 
 
