Correção da Banner

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <div class="d-flex flex-wrap flex-column justify-content-around align-items-center text-center py-3">
                 <div class="d-flex flex-wrap flex-column p-2 largura-50">
-                    <img id="main-publi" class="mx-auto" src="img/panfleto.jpg" alt="Imagem com informações principais do meetup Docker & Companhia. Data: em dezembro. Local: Cidade Universitária. Meetup Sorocaba. Docker & Companhia. Informações pelo telefone com Marcos (15) 98808-2972" />
+                    <img id="main-publi" class="mx-auto" src="img/panfleto.png" alt="Imagem com informações principais do meetup Docker & Companhia. Data: em dezembro. Local: Cidade Universitária. Meetup Sorocaba. Docker & Companhia. Informações pelo telefone com Marcos (15) 98808-2972" />
                 </div>
                 <div class="d-flex flex-wrap flex-row justify-content-around w-50">
                     <a href="https://www.sympla.com.br/1-meetup-docker--cia-sorocaba__355478" target="_blank" class="link-fontawe-icon">
