Alterações de Patrocínio

--- a/index.html
+++ b/index.html
@@ -199,11 +199,27 @@
 
             <div class="list-group-item flex-column align-items-start bg-secondary text-white">
                 <div class="d-flex flex-wrap w-100 justify-content-between ">
-                    <h5 class="mb-1">Em breve!! </h5>
+                   <!--<h5 class="mb-1">Em breve!! </h5>
                     <p></p>
-                </div>
+                </div>-->
                 <p class="mb-1"></p>
             </div>
+		<div class="card-deck mt-5">
+                <div class="card">
+			<div class="card-body">
+                        <a href="https://www.gft.com/br/pt/index/" target="_blank">
+                            <h5 class="card-title">GFT - Sorocaba</h5>
+                            <img src="img/Patrocinador_Gft.svg">
+                        </a>
+                    </div>
+                    <div class="card-body">
+                        <a href="https://www.sankhya.com.br/" target="_blank">
+                            <h5 class="card-title">SANKHYA</h5>
+                            <img src="img/patrocinio_sankhya.png">
+                        </a>
+                    </div>
+                </div>
+		
 
             </div </div> </article> <article id="organizadores" class="jumbotron jumbotron-fluid">
             <div class="container">
