--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 
             <div class="list-group-item flex-column align-items-start bg-secondary text-white">
                 <div class="d-flex flex-wrap w-100 justify-content-between ">
-                   <!--<h5 class="mb-1">Em breve!! </h5>
+                   <h5 class="mb-1"> :)</h5>
                     <p></p>
-                </div>-->
+                </div>
                 <p class="mb-1"></p>
             </div>
 		<div class="card-deck mt-5">
